
2004/08/05: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- base/waitcallback: fixed a severe bug
- os/gwentime: changed some arguments to const
- base/idlist: fixed a severe bug


2004/08/02: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added a tool which can automatically create header files appropriate for
  doxygen (this is because normally a list defined by GWEN_LIST_FUNCTION_DEFS
  is not documented): mklistdoc.
  Gwen now uses this tool to include API doc for all list functions defined
  this way.


2004-08-02   Christian Stimming <stimming@tuhh.de>

	* src/base/list2.h: Remove GWENHYWFAR_API from function
	definitions in the macro because the implementations will not be
	imported from the DLL but instead be generated locally through the
	other macro.

	* src/base/Makefile.am: Remove -I$(top_srcdir)/src/os because its
	process.h conflicts with <process.h> on gcc3.2 and mingw32.
	
	* src/base/waitcallback.c: Fix potential problem with
	uninitialized pointer.

	* configure.ac: Fix error in symlinking headers -- xml.h was
	missed.


2004/08/02: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- very much improved generation of API doc. In combination with the
  changes in my other projects the new target "install-srcdoc" now
  creates combined API docs (e.g. API doc for AqBanking now links to
  that of Gwenhywfar etc)


2004/08/01: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- base/waitcallback: 
  - fixed a bug (was unable to find callbacks by id).
  - API change !!
    Now all callbacks are kept in a flat list. You also now need to unregister
    callbacks you once registered !
  - GWEN_WaitCallback_Enter() is now a macro. This allows me track down the
    origin of a Callback (i.e. from where is has been entered).
  -> SO_VERSION incremented, SO_AGE=0 (makes it effectively .so.15)

