@@ -138,9 +138,10 @@ GWEN_ERRORCODE GWEN_BufferedIO_File__Close(GWEN_BUFFEREDIO *dm){
   assert(dm);
   bft=GWEN_INHERIT_GETDATA(GWEN_BUFFEREDIO, GWEN_BUFFEREDIO_FILE, dm);
   assert(bft);
-  if (bft->fd<3)
+  if (bft->fd<3) {
     /* one of the console IO sockets, do not close */
     return 0;
+  }
   if (close(bft->fd)) {
     DBG_ERROR(0, "Could not close (%s)",
 	      strerror(errno));
