@@ -77,7 +77,7 @@ extern "C" {
 #define GWEN_BUFFEREDIO_FLAGS_DEFAULT \
   (\
   GWEN_BUFFEREDIO_FLAGS_CLOSE\
-  \)
+  )
 
 
 #define GWEN_BUFFEREDIO_CBID_IO "GWEN_BUFFEREDIO_CBID_IO"
